fix horizontal scroll

--- a/custom_css/style.css
+++ b/custom_css/style.css
@@ -68,10 +68,6 @@ body {
 .cover-container {
   max-width: 72em;
 }
-.lead {
-  font-family: 'Zilla Slab', serif;
-
-}
 
 .masthead {
   margin-bottom: 2rem;
